--- a/pages/detail-page.html
+++ b/pages/detail-page.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="page.css">
     <script src="nl-sk-A-180.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="detail-page.css">
 </head>
 
 <body data-gr-c-s-loaded="true">
