Set up js files and declare submitComment

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <title>Museum Guide</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css">
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="index.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+
 </head>
 
 <body>
@@ -24,12 +25,12 @@
                 <img class="artObject" src="images/firth.jpeg" alt="museum-app"></a>
 
 
-
         </section>
     </main>
     <footer>
         <p>Made with &hearts; at Codaisseur</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
