--- a/pages/detail-page.html
+++ b/pages/detail-page.html
@@ -7,7 +7,7 @@
     <title>Remnants of some cool animals </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="page.css">
-    <script src="detail-page.js"></script>
+
 </head>
 
 <body data-gr-c-s-loaded="true">
@@ -40,9 +40,9 @@
         </form>
     </main>
     <footer>
-        <p>Made &hearts; at Codaisseur</p>
+        <p>Made with &hearts; at Codaisseur</p>
     </footer>
-
+    <script src="detail-page.js"></script>
 </body>
 
 </html>
